# flipflop-2025

./: Cargo.toml  README.md  tasks.py
benchmark/: Cargo.toml
benchmark/benches/: criterion.rs
puzzle1/src/: input.txt  lib.rs  main.rs
puzzle2/src/: lib.rs  main.rs
puzzle3/src/: input.txt  lib.rs  main.rs
puzzle4/: Cargo.toml
puzzle4/src/: input.txt  lib.rs  main.rs
puzzle5/: Cargo.toml
puzzle5/src/: input.txt  lib.rs  main.rs
puzzle6/: Cargo.toml
puzzle6/src/: input.txt  lib.rs  main.rs
puzzle7/: Cargo.toml
puzzle7/src/: input.txt  lib.rs  main.rs
