[workspace]
resolver = "3"
members = [
    "benchmark",
    "puzzle1",
    "puzzle2",
    "puzzle3",
]

[workspace.metadata.tasks]
problem_name = "puzzle"
problem_digits = 1

[workspace.metadata.puzzle1]
start_time = 2025-12-17T10:56:51.629401
completion_time = 2025-12-17T11:01:21.581055

[workspace.metadata.puzzle2]
start_time = 2025-12-17T11:01:42.177038
completion_time = 2025-12-17T11:10:43.536541

[workspace.metadata.puzzle3]
start_time = 2025-12-17T11:11:06.863052
completion_time = 2025-12-17T11:16:41.523458
[profile.release]
debug = true
