[workspace]
resolver = "3"
members = [
    "benchmark",
    "puzzle1",
    "puzzle2",
    "puzzle3",
    "puzzle4",
    "puzzle5",
    "puzzle6",
    "puzzle7",
]

[workspace.metadata.tasks]
problem_name = "puzzle"
problem_digits = 1

[workspace.metadata.puzzle1]
start_time = 2025-12-17T10:56:51.629401
completion_time = 2025-12-17T11:01:21.581055

[workspace.metadata.puzzle2]
start_time = 2025-12-17T11:01:42.177038
completion_time = 2025-12-17T11:10:43.536541

[workspace.metadata.puzzle3]
start_time = 2025-12-17T11:11:06.863052
completion_time = 2025-12-17T11:16:41.523458

[workspace.metadata.puzzle4]
start_time = 2025-12-17T11:16:58.879315
completion_time = 2025-12-17T11:22:58.247767

[workspace.metadata.puzzle5]
start_time = 2025-12-17T11:24:07.840712
completion_time = 2025-12-17T11:35:29.361983

[workspace.metadata.puzzle6]
start_time = 2025-12-17T11:37:22.801936
completion_time = 2025-12-17T11:47:18.830604

[workspace.metadata.puzzle7]
start_time = 2025-12-17T11:47:36.198980
completion_time = 2025-12-17T12:07:49.878053
[profile.release]
debug = true
